# dida-v2-client

./: .gitignore  LICENSE  README.md  SECURITY.md  pyproject.toml
docs/: v2-capability-matrix.md
src/dida_v2_client/: __init__.py  auth.py  cli.py  config.py  datetime_utils.py  filters.py  query.py  snapshot.py  transport.py  verify.py  version.py
tests/: conftest.py  test_auth.py  test_cli_auth.py  test_cli_columns.py  test_cli_folders_projects.py  test_cli_habits_stats.py  test_cli_query_verified.py  test_cli_saved_filters.py  test_cli_tag_batch.py  test_cli_task_helpers.py  test_cli_task_history.py  test_cli_task_v2_batch.py  test_columns.py  test_config.py  test_datetime_utils.py  test_folders_projects.py  test_habits_stats.py  test_python39_compat.py  test_query_saved_filter.py  test_query_service.py  test_saved_filter_client.py  test_saved_filter_evaluator.py  test_snapshot.py  test_tag_batch.py  test_task_helpers.py  test_task_history.py  test_task_v2_batch.py  test_transport.py  test_transport_retry.py  test_verified_actions.py  test_version.py
tests/fixtures/: full_sync_minimal.json  full_sync_timezone_edges.json  full_sync_with_filters.json  signon_error.json  signon_success.json  user_preferences_web.json
